# MedicAdminBackend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  procfile  pyproject.toml  requirements.txt  requirements2.txt
app/: main.py
app/models/: appointment_connection.py  database_connection.py  user_connection.py
app/routes/: admin_routes.py  appointment_routes.py  doctor_routes.py  patient_routes.py  user_routes.py
app/schemas/: appointment_schema.py  user_schema.py
schema/: user_schema.py
