[tool.poetry]
name = "Medicine project - backend"
version = "0.1.0"
description = "Proyecto donde se usa FastAPI para crear una API REST para un sistema de gestión de medicamentos."
authors = ["Jkrox <jkrox@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
pytest = "^7.4.0"
black = "^23.3.0"
pyjwt = "^2.7.0"
python-dotenv = "^1"
sqlalchemy = "^2.0.20"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79  # Ajusta la longitud máxima de línea según tus preferencias
